[gd_scene load_steps=11 format=3 uid="uid://bfriy2jdlme6s"]

[ext_resource type="Texture2D" uid="uid://cm4vpfbayosea" path="res://graphics/player.png" id="1"]
[ext_resource type="Script" uid="uid://3avsswg856k2" path="res://scripts/Player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bubs2t6e3ffy0" path="res://graphics/effect_hit.png" id="3"]
[ext_resource type="AudioStream" uid="uid://crgpjtni6dutj" path="res://audio/pickup.ogg" id="4"]
[ext_resource type="FontFile" uid="uid://1qblbv7x43xs" path="res://graphics/PublicPixel.ttf" id="4_d4ibd"]
[ext_resource type="AudioStream" uid="uid://bllps15lrdl1o" path="res://audio/crash.ogg" id="6"]

[sub_resource type="CapsuleShape2D" id="1"]
radius = 3.5
height = 7.0

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("effect_hit:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("effect_hit:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="Animation" id="3"]
resource_name = "hit"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("effect_hit:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("effect_hit:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l28mk"]
_data = {
&"RESET": SubResource("2"),
&"hit": SubResource("3")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 10
position = Vector2(146, 214)
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="effect_hit" type="Sprite2D" parent="."]
position = Vector2(0, -9)
scale = Vector2(2, 2)
texture = ExtResource("3")
hframes = 2
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_l28mk")
}

[node name="pickuptext" type="Label" parent="."]
offset_left = 6.0
offset_top = -22.0
offset_right = 48.0
offset_bottom = -9.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_d4ibd")
theme_override_font_sizes/font_size = 8
text = "!?"

[node name="Timer_reset" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Audio_PickUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")

[node name="Audio_Crash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6")

[connection signal="timeout" from="Timer_reset" to="." method="_on_Timer_reset_timeout"]
